Cleaned up files; Removed Projects

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </span>
                 </div>
             </section>
-            <section id="projects">
+           <!-- <section id="projects">
                 <div class="section__header">
                     <h1>Projects</h1>
                 </div>
@@ -68,7 +68,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+            </section>-->
         </main>
     </body>
 </html>
