Updated Job Title; Added Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
     <head>
         <title>TWDay</title>
-        <link rel="stylesheet" href="css/style.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="academicons-1.8.0/css/academicons.min.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="icon" type="image/png" href="assets/images/Website-Icon.png" />
-        <script src="https://use.fontawesome.com/cd4903d595.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
+        
     </head>
     <body>
+        <!--<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Thomas W. Day</a>        
+        </nav>-->
         <main>
             <section id="landing">
                 <div class="landing">
                     <h1>Thomas W. Day</h1>
-                    <h2>Ph.D. Student @ University of Chester</h2>
+                    <h2>Post-Doctoral Researcher</h2>
                     <h3>Unity3D | Virtual Reality | Mixed Reality</h3>
                     <span>
                         <a href="http://github.com/twday">
@@ -35,7 +41,7 @@
                 </div>
             </section>
            <!-- <section id="projects">
-                <div class="section__header">
+               <div class="section__header">
                     <h1>Projects</h1>
                 </div>
                 <div class="project project--wvr">
@@ -71,4 +77,9 @@
             </section>-->
         </main>
     </body>
-</html>
+    
+    <script src="https://use.fontawesome.com/cd4903d595.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    </html>
