--- a/_sections/Education.html
+++ b/_sections/Education.html
@@ -1,7 +1,9 @@
 ---
+name: Education
+order: 1
 ---
 <section>
-    <a id="Education"></a>
+    <a id="{{ page.name }}"></a>
     <div class="section__header">
         <h1>
             <span>Edu</span>cation
