--- a/_sections/Experience.html
+++ b/_sections/Experience.html
@@ -1,7 +1,9 @@
 ---
+name: Experience
+order: 2
 ---
 <section>
-  <a id="Experience"></a>
+  <a id="{{ page.name }}"></a>
   <div class="section__header">
     <h1>
       <span>Exp</span>erience
