--- a/_sections/Projects.html
+++ b/_sections/Projects.html
@@ -1,7 +1,9 @@
 ---
+name: Projects
+order: 3
 ---
 <section>
-  <a id="Projects"></a>
+  <a id="{{ page.name }}"></a>
   <div class="section__header">
       <h1>
           <span>Pro</span>jects
