--- a/_sections/Publications.html
+++ b/_sections/Publications.html
@@ -12,60 +12,60 @@ order: 7
     Thesis
     <ol>
         <li>
-            [1] Day, Thomas W. “Virtual and mixed reality support for activities of daily living”. University of Chester, 2019.
+            <b>Day, Thomas W.</b> “Virtual and mixed reality support for activities of daily living”. University of Chester, 2019.
         </li>
     </ol>
     Peer-reviewed journals
     <ol>
         <li>
             The Implementation and Validation of a Virtual Environment for Training Powered Wheelchair Manoeuvres
-            Nigel W. John, Serban R. Pop, Thomas W. Day, Panagiotis D. Ritsos, Christopher J. Headleand
-            IEEE Transactions on Visualization and Computer Graphics (2017) pp. 1867–1878. Institute of Electrical and Electronics Engineers
+            Nigel W. John, Serban R. Pop, <b>Thomas W. Day</b>, Panagiotis D. Ritsos, Christopher J. Headleand
+            <i>IEEE Transactions on Visualization and Computer Graphics (2017)</i> pp. 1867–1878. Institute of Electrical and Electronics Engineers
             (IEEE), 2017. DOI: 10.1109/tvcg.2017.2700273
         </li>
     </ol>
     Peer-reviewed conferences and workshops
     <ol>
         <li>
-            [1] Challenges and Technologies for Low Cost Wheelchair Simulation
-            Christopher J Headleand, Thomas Day, Serban R Pop, Panagiotis D Ritsos, Nigel W John
-            Visual Computing for Medicine and Biology, 2015
+            Challenges and Technologies for Low Cost Wheelchair Simulation
+            Christopher J Headleand, <b>Thomas Day</b>, Serban R Pop, Panagiotis D Ritsos, Nigel W John
+            <i>Visual Computing for Medicine and Biology, 2015</i>
         </li>
         <li>
-            [2] A Cost-Effective Virtual Environment for Simulating and Training Powered Wheelchairs Manoeuvres
-            Christopher J Headleand, Thomas Day, Serban R Pop, Panagiotis D Ritsos, Nigel W John
-            Medicine Meets Virtual Reality 22: NextMed/MMVR22 220 (2016) pp. 134–141. IOS Press, 2016
+            A Cost-Effective Virtual Environment for Simulating and Training Powered Wheelchairs Manoeuvres
+            Christopher J Headleand, <b>Thomas Day</b>, Serban R Pop, Panagiotis D Ritsos, Nigel W John
+            <i>Medicine Meets Virtual Reality 22: NextMed/MMVR22 220 (2016)</i> pp. 134–141. IOS Press, 2016
         </li>
         <li>
-            [3] Training Powered Wheelchair Manoeuvres in Virtual Reality
-            Thomas W. Day
-            Posture and Mobility Group Conference (2016). 2016
+            Training Powered Wheelchair Manoeuvres in Virtual Reality
+            <b>Thomas W. Day</b>
+            <i>Posture and Mobility Group Conference (2016)</i>. 2016
         </li>
         <li>
-            [4] Recent Developments and Future Challenges in Medical Mixed Reality
-            Long Chen, Thomas W Day, Wen Tang, Nigel W John
-            2017 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2017. DOI: 10.1109/ismar.2017.29
+            Recent Developments and Future Challenges in Medical Mixed Reality
+            Long Chen, <b>Thomas W Day</b>, Wen Tang, Nigel W John
+            <i>2017 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)</i>, 2017. DOI: 10.1109/ismar.2017.29
         </li>
         <li>
-            [5] Using Virtual Reality to Experience Different Powered Wheelchair Configurations
-            Thomas W. Day, William H. Dobson, Christopher J. Headleand, Nigel W. John, Serban R. Pop
-            2017 International Conference on Cyberworlds (CW), 2017. DOI: 10.1109/cw.2017.33
+            Using Virtual Reality to Experience Different Powered Wheelchair Configurations
+            <b>Thomas W. Day</b>, William H. Dobson, Christopher J. Headleand, Nigel W. John, Serban R. Pop
+            <i>2017 International Conference on Cyberworlds (CW)</i>, 2017. DOI: 10.1109/cw.2017.33
         </li>
         <li>
-            [6] Wheelchair-MR: A Mixed Reality Wheelchair Training Environment
-            Thomas W. Day
-            2017 International Conference on Cyberworlds (CW), 2017. DOI: 10.1109/cw.2017.12
+            Wheelchair-MR: A Mixed Reality Wheelchair Training Environment
+            <b>Thomas W. Day</b>
+            <i>2017 International Conference on Cyberworlds (CW)</i>, 2017. DOI: 10.1109/cw.2017.12
         </li>
         <li>
-            [7] Virtual Reality Environment for the Cognitive Rehabilitation of Stroke Patients
-            N. W. John, T. W. Day, S. R. Pop, K. Chatterjee, K. Cottrell, A. Buchanan, J. Roberts
-            2019 11th International Conference on Virtual Worlds and Games for Serious Applications (VS-Games), 2019. DOI: 10.1109/VS-Games.
+            Virtual Reality Environment for the Cognitive Rehabilitation of Stroke Patients
+            N. W. John, <b>T. W. Day</b>, S. R. Pop, K. Chatterjee, K. Cottrell, A. Buchanan, J. Roberts
+            <i>2019 11th International Conference on Virtual Worlds and Games for Serious Applications (VS-Games)</i>, 2019. DOI: 10.1109/VS-Games.
             2019.8864513
         </li>
         <li>
-            [8] Training Powered Wheelchair Manoeuvres in Mixed Reality
-            T. W. Day, N. W. John
-            2019 11th International Conference on Virtual Worlds and Games for Serious Applications (VS-Games), 2019. DOI: 10.1109/VS-Games.
+            Training Powered Wheelchair Manoeuvres in Mixed Reality
+            <b>T. W. Day</b>, N. W. John
+            <i>2019 11th International Conference on Virtual Worlds and Games for Serious Applications (VS-Games)</i>, 2019. DOI: 10.1109/VS-Games.
             2019.8864515
         </li>
     </ol>    
