--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@ layout: default
 title: Home
 ---
 
-{% assign sections = site.sections | sort: 'order' %}
+<section class="landing">
+    <div class="landing_profile">
+        <img class="landing_profileImg" src="assets/images/profile.jpg" alt="Profile Picture">
+        <h1>Thomas W. Day, Ph.D</h1>
+        <h2>Researcher</h2>
+    </div>
+    <div class="landing_main">
+
+    </div>
+</section>
+{% assign sections = site.sections %}
 {% for section in sections %}
     {{section.content}}
 {% endfor %}
