--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ title: Home
         <h2>Researcher</h2>
     </div>
     <div class="landing_main">
-
+        Software Developer with over 6 years of experience developing VR applications with Unity3D and C#
     </div>
 </section>
+
 {% assign sections = site.sections %}
 {% for section in sections %}
     {{section.content}}
