--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 
-<section class="landing bg_dark">
+<section class="landing page-section">
     <div class="landing_profile">
         <img class="landing_profileImg" src="assets/images/profile.jpg" alt="Profile Picture">
     </div>
@@ -13,11 +13,8 @@ title: Home
     </div>
 </section>
 
-{% assign i = 1 %}
 {% for section in site.sections %}
-    {% assign c = i | modulo: 2 %}
-    <section class="bg_{% if c == 0 %}dark{% else %}light{% endif %}">
+    <section class="page-section">
         {{section.content}}
     </section>
-    {% assign i = i | plus: 1 %}
 {% endfor %}
