--- a/projects.html
+++ b/projects.html
@@ -2,15 +2,97 @@
 layout: default
 title: Projects
 ---
-
 {% for project in site.projects %}
-    {% if project.coverImage %}
-        <img src="{{ site.baseurl }}/assets/images/projects/{{ project.coverImage }}" alt="{{project.title}}">
-    {% endif %}
-    <h1>{{ project.title }}</h1> {{ project.timeSpan }}
-    {% if project.repo %}
-        <a href="{{ project.repo }}">GitHub</a>
-    {% endif %}
-    {{ project.subtitle }}
-    {{ project.content }}
-{% endfor %}
+    <div class="card mb-2">
+        {% if project.coverImage %}
+        <img class="card-img" src="{{ site.baseurl }}/assets/images/projects/{{ project.coverImage }}" alt="{{project.title}}">
+        {% endif %}
+        <div class="card-body">
+            <h5 class="card-title">{{ project.title }}</h5>
+            <h6 class="card-subtitle mb-2 text-muted float-right">{{ project.timeSpan }}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{ project.subtitle }}</h6>
+            {% if project.repo %}
+            <a class="btn btn-sm btn-outline-secondary" href="{{ project.repo }}">GitHub</a>
+            {% endif %}
+            <button class="btn btn-sm btn-outline-primary collapsed" type="button" data-toggle="collapse" data-target="#{{ project.title | replace: ' ', '_' | replace: ' ', '_' | replace: ' ', '_' }}Collapse" aria-expanded="false" aria-controls="{{project.title | replace: ' ', '_'}}Collapse">
+                Read More
+            </button>
+            <div class="collapse mt-3" id="{{ project.title | replace: ' ', '_' }}Collapse">
+                <hr class="my-2" />
+                {{ project.content }}
+
+                {% if project.technologies or project.collaborators %}
+                <div class="card mb-2">
+                    <div class="card-header">
+                        <ul class="nav nav-tabs card-header-tabs">
+                            {% if project.technologies %}
+                            <li class="nav-item">
+                                <a class="nav-link active" id="{{project.title | replace: ' ', '_'}}TechTab" data-toggle="tab" href="#{{project.title | replace: ' ', '_'}}Tech" role="tab" aria-controls="{{project.title | replace: ' ', '_'}}Tech" aria-selected="true">
+                                    Technologies
+                                </a>
+                            </li>
+                            {% endif %}
+                            {% if project.collaborators %}
+                            <li class="nav-item">
+                                <a class="nav-link" id="{{project.title | replace: ' ', '_'}}CollabTab" data-toggle="tab" href="#{{project.title | replace: ' ', '_'}}Collab" role="tab" aria-controls="{{project.title | replace: ' ', '_'}}Collab" aria-selected="false">
+                                    Collaborators
+                                </a>
+                            </li>
+                            {% endif %}
+                            {% if project.funding %}
+                            <li class="nav-item">
+                                <a class="nav-link" id="{{project.title | replace: ' ', '_'}}FundingTab" data-toggle="tab" href="#{{project.title | replace: ' ', '_'}}Funding" role="tab" aria-controls="{{project.title | replace: ' ', '_'}}Funding" aria-selected="false">
+                                    Funding
+                                </a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </div>
+                    <div class="tab-content" id="techTab">
+                        {% if project.technologies %}
+                        <div class="tab-pane fade show active" id="{{project.title | replace: ' ', '_'}}Tech" role="tabpanel" aria-labelledby="{{project.title | replace: ' ', '_'}}TechTab">
+                            <ul class="list-group list-group-flush">
+                                {% for tech in project.technologies %}
+                                <li class="list-group-item">{{tech}}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        {% endif %}
+                        {% if project.collaborators %}
+                        <div class="tab-pane fade" id="{{project.title | replace: ' ', '_'}}Collab" role="tabpanel" aria-labelledby="{{project.title | replace: ' ', '_'}}CollabTab">
+                            <ul class="list-group list-group-flush">
+                                {% for collab in project.collaborators %}
+                                <li class="list-group-item">{{collab}}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        {% endif %}
+                        {% if project.funding %}
+                        <div class="tab-pane fade" id="{{project.title | replace: ' ', '_'}}Funding" role="tabpanel" aria-labelledby="fundingTab">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Funder</th>
+                                        <th scope="col">Date</th>
+                                        <th scope="col">Value</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for funding in project.funding %}
+                                    <tr>
+                                        <td>{{funding.funder}}</td>
+                                        <td>{{funding.date_from}} - {{funding.date_to}}</td>
+                                        <td>{{funding.value | money}}</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    {% endfor %}
