--- a/index.html
+++ b/index.html
@@ -1,85 +1,28 @@
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <title>TWDay</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="academicons-1.8.0/css/academicons.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="icon" type="image/png" href="assets/images/Website-Icon.png" />
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style.css">
-        
-    </head>
-    <body>
-        <!--<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Thomas W. Day</a>        
-        </nav>-->
-        <main>
-            <section id="landing">
-                <div class="landing">
-                    <h1>Thomas W. Day</h1>
-                    <h2>Post-Doctoral Researcher</h2>
-                    <h3>Unity3D | Virtual Reality | Mixed Reality</h3>
-                    <span>
-                        <a href="http://github.com/twday">
-                            <i class="fa fa-github"></i>
-                        </a>
-                        <a href="http://twitter.com/tday_42">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a href="http://linkedin.com/in/twday">
-                            <i class="fa fa-linkedin"></i>
-                        </a>
-                        <a href="mailto:tday42@gmail.com">
-                            <i class="fa fa-envelope"></i>
-                        </a>
-                        <a href="https://orcid.org/0000-0002-9153-4862">
-                            <i class="ai ai-orcid"></i>
-                        </a>
-                    </span>
+---
+layout: default
+title: Home
+---
+
+<section class="page-section">
+    <div class="card m-auto">
+        <div class="row no-gutters">
+            <div class="col-sm-4">
+                <img class="card-img" src="assets/images/profile.jpg" alt="Profile Picture">
+            </div>
+            <div class="col-sm-8 d-flex align-items-center">
+                <div class="card-body">
+                    <h4 class="card-title">Thomas W. Day, Ph.D</h4>
+                    <h5 class="card-subtitle">
+                        Researcher
+                    </h5>
                 </div>
-            </section>
-           <!-- <section id="projects">
-               <div class="section__header">
-                    <h1>Projects</h1>
-                </div>
-                <div class="project project--wvr">
-                    <div class="project__title" style="background-image: url('assets/images/wheelchair-vr.jpeg')">
-                        <h1>Wheelchair-VR</h1>
-                    </div>
-                    <div class="project_description">
-                        <p>
-                            A low-cost virtual reality wheelchair training simulator
-                        </p>
-                    </div>
-                </div>
-                <div class="project project--wmr">
-                    <div class="project__title" style="background-image: url('assets/images/wheelchair-mr.jpg')">
-                        <h1>Wheelchair-MR</h1>
-                    </div>
-                    <div class="project_description">
-                        <p>
-                            A low-cost virtual reality wheelchair training simulator
-                        </p>
-                    </div>
-                </div>
-                <div class="project project--svr">
-                    <div class="project__title" style="background-image: url('assets/images/stroke-vr.png')">
-                        <h1>Stroke-VR</h1>
-                    </div>
-                    <div class="project_description">
-                        <p>
-                            A low-cost virtual reality wheelchair training simulator
-                        </p>
-                    </div>
-                </div>
-            </section>-->
-        </main>
-    </body>
-    
-    <script src="https://use.fontawesome.com/cd4903d595.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </html>
+            </div>
+        </div>
+    </div>
+</section>
+
+{% for section in site.sections %}
+    <section class="mb-5">
+        {{section.content}}
+    </section>
+{% endfor %}
