--- a/_sections/About.html
+++ b/_sections/About.html
@@ -2,9 +2,13 @@
 name: About
 order: 1
 ---
-<a id="{{ page.name }}"></a>
-<p>
-    Software Developer with over 6 years of experience developing VR applications with Unity3D and C#. 
-    <br>
-    Ph.D. in Virtual and Mixed Reality in Medical applications from University of Chester and B.Sc. (Hons) Computer Science from Bangor University
-</p>
+<div class="m-auto p-4">
+	<a id="{{ page.name }}"></a>
+	<div class="container-fluid">
+		<p>
+			Software Developer with over 6 years of experience developing VR applications with Unity3D and C#.
+			<br>
+			Ph.D. in Virtual and Mixed Reality in Medical applications from University of Chester and B.Sc. (Hons) Computer Science from Bangor University
+		</p>
+	</div>
+</div>
