--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@ permalink: /404.html
 layout: default
 ---
 
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-4">404 - Page Not Found</h1>
-        <p class="lead">The requested page could not be found.</p>
-    </div>
-</div>
+<section class="page-section">
+	<div class="m-auto d-flex row">
+		<h1 class="display-5 fw-bold text-center">404 - Page Not Found</h1>
+		<p class="lead text-center">The requested page could not be found.</p>
+	</div>
+</section>
